force-app/main/default/objects/NCMT_Tree_structure__c/NCMT_Tree_structure__c.object-meta.xml
<CustomObject>
    <label>NCMT Tree structure</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Tree Structure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Tree structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>