force-app/main/default/objects/NCMT_Tree_structure__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <inlineHelpText>Name associated with the selected level of project tree</inlineHelpText>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>