force-app/main/default/objects/NCMT_Tree_structure__c/fields/Can_Have_Items__c.field-meta.xml
<CustomField>
    <fullName>Can_Have_Items__c</fullName>
    <formula>RecordType.Name == &apos;Tree Leaf&apos; ||  RecordType.Name == &apos;Default&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Have Items</label>
    <type>Checkbox</type>
</CustomField>