force-app/main/default/objects/NCMT_Tree_structure__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <inlineHelpText>Description of the Parent</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>