force-app/main/default/objects/NCMT_Tree_structure__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>LPAD(text(Level__c) + &quot;.&quot; + &quot;    &quot; + Name, Level__c*4, &quot;  &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>