force-app/main/default/objects/NCMT_Tree_structure__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <formula>IF( text(Project_ID__r.Markup_Method__c) ==&apos;RSMeans - O&amp;P&apos;,(ECCA__c *(1 + Markup__r.Construction_Contingency__c)),
ECCA__c 
*(1 + Markup__r.Construction_Contingency__c)
*(1 + Markup__r.Art_In_Architecture__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>