force-app/main/default/objects/NCMT_Tree_structure__c/fields/ECCA__c.field-meta.xml
<CustomField>
    <fullName>ECCA__c</fullName>
    <formula>IF( text(Project_ID__r.Markup_Method__c) ==&apos;RSMeans - O&amp;P&apos;,

(Markup__r.Bid_Factor__c*(Total_Cost__c*(1 + Markup__r.Market_Escalation__c))),

Total_Including_Markups__c
*(1 + Markup__r.CMc__c)
*(1 + Markup__r.Professional_Services_Fees_Preconst__c)
*(1 + Markup__r.Developer_Fee__c)
*(1 + Markup__r.Professional_Services_Developer_Fee__c)
*(1 + Markup__r.Lessor_Fee__c)
*(1 + Markup__r.Professional_Services_Lessor_Fee__c)
*(1 + Markup__r.Gross_Receipt_State_Construction__c)
*(1 + Markup__r.Market_Escalation__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>