force-app/main/default/objects/NCMT_Tree_structure__c/fields/Estimate_Format__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Format__c</fullName>
    <label>Estimate Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uniformat</fullName>
            </value>
            <value>
                <fullName>IRIS Format</fullName>
            </value>
            <value>
                <fullName>Master Format</fullName>
                <default>true</default>
                <label>Master Format</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>