force-app/main/default/objects/NCMT_Tree_structure__c/fields/ETPC__c.field-meta.xml
<CustomField>
    <fullName>ETPC__c</fullName>
    <formula>(ECC__c * (1+ Markup__r.EDRC_Estimated_Design_and_Review_Cost__c + Markup__r.EMIC_Estimated_Management_Inspection_Co__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>