force-app/main/default/objects/NCMT_Tree_structure__c/fields/Include_In_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Estimate__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the value will be included in the estimate. If not checked, the value will not be included in the estimate.</inlineHelpText>
    <label>Include In Estimate</label>
    <type>Checkbox</type>
</CustomField>