force-app/main/default/objects/NCMT_Tree_structure__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT DES Item</label>
    <referenceTo>NCMT_DES_Items__c</referenceTo>
    <relationshipName>Tree_structures</relationshipName>
    <type>Lookup</type>
</CustomField>