force-app/main/default/objects/NCMT_Tree_structure__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Project Markup</label>
    <referenceTo>NCMT_Project_Markup__c</referenceTo>
    <relationshipLabel>NCMT Tree structures</relationshipLabel>
    <relationshipName>NCMT_Tree_structures</relationshipName>
    <type>Lookup</type>
</CustomField>