force-app/main/default/objects/NCMT_Tree_structure__c/fields/Markup_Method__c.field-meta.xml
<CustomField>
    <fullName>Markup_Method__c</fullName>
    <label>Markup Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GSA Markups</fullName>
            </value>
            <value>
                <fullName>RSMeans - O&amp;P</fullName>
            </value>
            <value>
                <fullName>User Defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>