force-app/main/default/objects/NCMT_Tree_structure__c/fields/OP_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>OP_Unit_Cost__c</fullName>
    <description>unit cost for o&amp;p projects</description>
    <formula>Total_Cost__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>