force-app/main/default/objects/NCMT_Tree_structure__c/fields/Parent_Node_Desc__c.field-meta.xml
<CustomField>
    <fullName>Parent_Node_Desc__c</fullName>
    <formula>Relatedtree__r.description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Description of the Parent for the branch.</inlineHelpText>
    <label>Parent Desc.</label>
    <type>Text</type>
</CustomField>