force-app/main/default/objects/NCMT_Tree_structure__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipName>Tree_structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>