force-app/main/default/objects/NCMT_Tree_structure__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of units needed</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>