force-app/main/default/objects/NCMT_Tree_structure__c/fields/Relatedtree__c.field-meta.xml
<CustomField>
    <fullName>Relatedtree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ID of the Parent for the branch.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>NCMT_Tree_structure__c</referenceTo>
    <relationshipLabel>NCMT Tree structures</relationshipLabel>
    <relationshipName>Tree_structures</relationshipName>
    <type>Lookup</type>
</CustomField>