force-app/main/default/objects/NCMT_Tree_structure__c/fields/SortOrdertxt__c.field-meta.xml
<CustomField>
    <fullName>SortOrdertxt__c</fullName>
    <label>SortOrdertxt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>