force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Assembly_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The cost of all assemblies pulled from the database that are assigned a subcontractor markup</inlineHelpText>
    <label>Total Assembly Cost w. Subcon Markups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>