force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The sum of all costs included in the associated tree level of the estimate including Subcontractor markups</inlineHelpText>
    <label>Total Branch Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>