force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Cost_w_o_Subcon__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_w_o_Subcon__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cost-Self Performed Work</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>