force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Direct Cost w/o Subcontractor markups</inlineHelpText>
    <label>Total Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>