force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Including_Markups__c.field-meta.xml
<CustomField>
    <fullName>Total_Including_Markups__c</fullName>
    <formula>Total_OS_Work__c +  Total_Self_Work__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Including Markups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>