force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Items_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Items_Cost__c</fullName>
    <formula>Total_Cost__c -  Total_Cost_w_o_Subcon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost-Outsourced Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>