force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_OS_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_OS_Work__c</fullName>
    <formula>Total_Items_Cost__c
*(1 + Markup__r.Site_Design_Contingency__c)
*(1 + Markup__r.Prime_Con_OSWork_Homeoff_Overhead__c + Markup__r.Prime_Con_OSWork_Jobsite_Overhead__c)
*(1 + Markup__r.Prime_Con_OSWork_Profit__c)
*(1 + Markup__r.Prime_Con_OSWork_Commission__c)
*(1 + Markup__r.Prime_Con_OSWork_Bond__c)
*(1 + Markup__r.Professional_Services_Fees_OSWork__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total OS Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>