force-app/main/default/objects/NCMT_Tree_structure__c/fields/Total_Self_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_Self_Work__c</fullName>
    <formula>Total_Cost_w_o_Subcon__c
*(1 + Markup__r.Site_Design_Contingency__c)
*(1 + Markup__r.Prime_Con_SelfWork_HomeOff_Overhead__c + Markup__r.Prime_Con_SelfWork_JobSiteOverhead__c)
*(1 + Markup__r.Prime_Con_SelfWork_Profit__c)
*(1 + Markup__r.Prime_Con_SelfWork_Bond__c)
*(1 + Markup__r.Prime_Con_SelfWork_Commission__c)
*(1 + Markup__r.Professional_Services_Fees_SelfWork__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Self Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>