force-app/main/default/objects/NCMT_Tree_structure__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of Measure</description>
    <label>UOM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>