force-app/main/default/objects/NCMT_Tree_structure__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>