force-app/main/default/objects/NCMT_Tree_structure__c/recordTypes/Tree_Branch.recordType-meta.xml
<RecordType>
    <fullName>Tree_Branch</fullName>
    <active>true</active>
    <description>Record type associated with a branch of the tree</description>
    <label>Tree Branch</label>
</RecordType>