force-app/main/default/objects/NCMT_Tree_structure__c/recordTypes/Tree_Leaf.recordType-meta.xml
<RecordType>
    <fullName>Tree_Leaf</fullName>
    <active>true</active>
    <description>Record type associated with the tree leaves</description>
    <label>Tree Leaf</label>
</RecordType>