force-app/main/default/objects/NCMT_Tree_structure__c/recordTypes/Tree_Leaf_O_P.recordType-meta.xml
<RecordType>
    <fullName>Tree_Leaf_O_P</fullName>
    <active>true</active>
    <description>For O&amp;P Cost depending on project delivery method</description>
    <label>Tree Leaf O&amp;P</label>
</RecordType>